--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   src="rick.jpeg" /> 
 		<div class="inpstuff"><input type="text" placeholder="Enter name here" class="coolthing">
 		<button class="myButton" onclick="diezneuf()">Submit</button></div>
-	<p class="changer">Have Fun!</p><p class="score">0/0</p>
+	<p class="changer">Have Fun!</p><p class="score">0/0 (0%)</p>
 	</div>
 		
 	</div>
