The Mode Update!

--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
           <div class="option purple" onclick="purpleTheme()"></div>
         </div>
       </div>
+	  <div class="cont">
+	  <h1>Modes</h1>
+	  <div class="modes">
+	  <div class="mode" onclick="easyMode()" id="ez">Easy</div>
+	  <div class="mode active" onclick="normalMode()" id="no">Normal</div>
+	  <div class="mode" onclick="hardMode()" id="ha">Hard</div>
+	  <div class="mode" onclick="allMode()" id="al">All Countries</div>
+	  </div>
+	  </div>
     </div>
 </body>
 <script src="script.js"></script>
